--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <div id="hero">
       <img
-        src="https://github.com/VerenaSousaADS/Projeto-1/blob/master/images/img1.jpg"
+        src="/images/img1.jpg"
         alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com móveis"
       />
       <h1>Ambientes <span>únicos</span> para você!</h1>
