Tentativa 02  de correção do bug github pages

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Móveis customizados</title>
   </head>
   <body>
     <div id="hero">
       <img
-        src="./images/img1.jpg"
+        src="images/img1.jpg"
         alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com móveis"
       />
       <h1>Ambientes <span>únicos</span> para você!</h1>
@@ -55,7 +55,7 @@
 
     <img
       id="balls"
-      src="./images/balls.svg"
+      src="images/balls.svg"
       alt="bolinhas laranjas no canto inferior da tela"
     />
   </body>
